--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ script:
   - ls -al 	
   - sudo apt-get install python-pip
   - sudo apt-get install python-dev 
+  - sudo apt-get install libxml2-dev
+  - sudo apt-get install libxslt-dev
+  - sudo apt-get install libssl-dev
+  - sudo apt-get install libffi-dev
+  - sudo apt-get install python-pip
+  - sudo apt-get install ansible
+  - pip install junos-eznc	
   - cd sample_ospf_templating
   - python template.py
 sudo:
