--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
   - pip install junos-eznc	
   - ls 
   - pwd
-  - python lsdir.py
+  - python /home/travis/build/yukthr/auts/auts/sample_bgp_templating/bgp.py
 sudo:
 - required	
