--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ script:
   - pip install junos-eznc	
   - ls 
   - pwd
-  - python /home/travis/build/yukthr/auts/auts/sample_bgp_templating/bgp.py
+  - cd sample_ospf*
+  - python *.py
+  - cd sample_bgp*
+  - python *.py
 sudo:
 - required	
