adding specific knobs

--- a/junos_ansible/junos_ping/ping.yml
+++ b/junos_ansible/junos_ping/ping.yml
@@ -8,8 +8,12 @@
     - Juniper.junos
   tasks: 
     - 
-      juniper_junos_ping: "host={{ inventory_hostname }} port=830 username=lab passwd=lab123 dest_ip=192.168.0.29"
+      juniper_junos_ping: "host={{ inventory_hostname }} port=830 username=lab passwd=lab123 dest=192.168.0.29 count=10"
       name: "Test Ping to another devices from vmx"
       register: junos
-    - debug: var=junos
-      name: junos-ping 
+    - debug: 
+        var=junos.count
+      name: junos-ping-count
+    - debug:
+        var=junos.dest
+      name: junos-ping-destination 
