adding ping_df with outputs

--- a/junos_ansible/junos_ping/ping_df.yml
+++ b/junos_ansible/junos_ping/ping_df.yml
@@ -13,4 +13,9 @@
         register: junos
       -
         debug:
-          var=junos
+          var: "{{ item.value }}"
+        with_items:
+          - value: junos.packet_loss 
+          - value: junos.size
+          - value: junos.msg
+          - value: junos.do_not_fragment 
