--- a/aws_ansible_s3_upload.yml
+++ b/aws_ansible_s3_upload.yml
@@ -24,3 +24,7 @@
         object: /home_{{ temp }}.tgz
         src: /home/pi/home_{{ temp }}.tgz
         
+    - name: Delete the Folder after the upload
+      file:
+        path: /home/pi/home_{{ temp }}.tgz
+        state: absent 
